--- a/Leaky.analysis.flow.Rmd
+++ b/Leaky.analysis.flow.Rmd
@@ -206,7 +206,7 @@ risk <- 10.0   #risk multiplier
 
 We are using the EpiModel framework, http://www.epimodel.org/, with help from Sam Jenness (Emory University).  
 
-Note that this code chunk includes the model initiation piece, in which among other things we initialize the overall population size and the size of any subpopulations defined by exposure risk. 
+Note that this code chunk includes the model initiation piece, in which among other things we initialize the overall population size and the size of any sub-populations defined by exposure risk. 
 
 First pass at the size of these risk subpopulations are 10% high risk, 80% medium risk, and 10% no (zero) risk. (This parameterization is tough:  Dimitrov et al 2015 even suggest that the MAJORITY of individuals in trials are NOT exposed; https://pubmed.ncbi.nlm.nih.gov/25569838/)
   
